--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ ul {
 
 .header {
 border-bottom: 1px solid #e7e9fc;
+
+box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -92,13 +94,34 @@ gap: 40px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus,
 .address-list-contacts:hover,
-.address-list-contacts:focus {
+.address-list-contacts:focus,
+.header-menu-link.current {
     color: #404bbf;
+}
+
+.header-menu-link.current::after {
+        content: "";
+
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+
+        background-color: #404bbf;
+}
+
+.header-menu-link.current {
+        position: relative;
 }
 
 .address {
@@ -120,6 +143,9 @@ gap: 40px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
 
 .container-hero {
