--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,14 @@ gap: 40px;
 
 .hero {
 background-color: #2e2f42;
+
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
+
+max-width: 1440px;
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+
 padding-top: 188px;
 padding-bottom: 188px;
 }
@@ -186,6 +194,7 @@ padding-bottom: 188px;
         border: none;
         margin: 0 auto;
         display: block;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
