--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,13 @@ width: calc((100% - 3 * 24px) / 4);
         background-color: #FFFFFF;
         width: calc((100% - 3 * 24px) / 4);
         border-radius: 0 0 4px 4px;
-        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);               background: #fff;
+        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);               
+        background: #fff;
+}
+
+.icon-item:hover, 
+.icon-item:focus {
+        background-color: #404bbf;
 }
 
 .team-image {
@@ -346,10 +352,11 @@ width: calc((100% - 3 * 24px) / 4);
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-icon {
-        fill: #4d5ae5;
+        fill: #f4f4fd;
 }
 
 .portfolio {
