--- a/css/styles.css
+++ b/css/styles.css
@@ -298,11 +298,6 @@ width: calc((100% - 3 * 24px) / 4);
         background: #fff;
 }
 
-.icon-item:hover, 
-.icon-item:focus {
-        background-color: #404bbf;
-}
-
 .team-image {
 
 }
@@ -336,7 +331,7 @@ width: calc((100% - 3 * 24px) / 4);
         display: flex;
         justify-content: center;
         gap: 24px;
-
+        
 }
 
 .icon-item {
@@ -353,10 +348,17 @@ width: calc((100% - 3 * 24px) / 4);
         align-items: center;
         justify-content: center;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+
+.icon-link:hover, 
+.icon-link:focus {
+        background-color: #404bbf;
 }
 
 .soc-icon {
         fill: #f4f4fd;
+        list-style: none;
 }
 
 .portfolio {
