--- a/css/styles.css
+++ b/css/styles.css
@@ -421,7 +421,13 @@ width: calc((100% - 3 * 24px) / 4);
 }
 
 .container-footer {
-        
+        display: flex;
+        align-items: baseline;
+        margin-right: 120px;
+}
+
+.footer-box {
+margin-right: 120px;
 }
 
 .footer-logo {
@@ -460,13 +466,38 @@ width: calc((100% - 3 * 24px) / 4);
 }
 
 .footer-soc-text {
-        
+font-family: var(--font-family);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #ffffff;
+        margin-bottom: 16px;
 }
 
-.footer-soc-list {}
+.footer-soc-list {
+        display: flex;
+        gap: 16px;
+}
 
-.footer-soc-item {}
+.footer-soc-item {
+        width: 40px;
+        height: 40px;
+}
 
-.footer-soc-icon {}
+.footer-link {
+display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-soc-icon {
+                fill: #f4f4fd;
+}
 
 
