--- a/css/styles.css
+++ b/css/styles.css
@@ -496,6 +496,11 @@ display: flex;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-link:hover, 
+.footer-link:focus {
+        background-color: #31d0aa;
+}
+
 .footer-soc-icon {
                 fill: #f4f4fd;
 }
