--- a/css/styles.css
+++ b/css/styles.css
@@ -390,6 +390,36 @@ width: calc((100% - 3 * 24px) / 4);
 
 .portfolio-item {
         width: calc((100% - 48px) / 3);
+        background-color: #fff;
+        transition: box-shadow 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-image-container {
+        position: relative;
+        overflow: hidden;
+}
+
+.portfolio-item:hover .overlay{
+        transform: translateY(0%);
+}
+
+.overlay {
+        position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-content {
