--- a/css/styles.css
+++ b/css/styles.css
@@ -391,7 +391,8 @@ width: calc((100% - 3 * 24px) / 4);
 .portfolio-item {
         width: calc((100% - 48px) / 3);
         background-color: #fff;
-        transition: box-shadow 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
 
 .portfolio-item:hover {
