--- a/css/styles.css
+++ b/css/styles.css
@@ -156,14 +156,14 @@ gap: 40px;
 
 .hero {
 background-color: #2e2f42;
-
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
 
 max-width: 1440px;
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
-
+margin-left: auto;
+margin-right: auto;
 padding-top: 188px;
 padding-bottom: 188px;
 }
